--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.10",
     "next": "13.4.7",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-select": "^5.7.3",
     "styled-components": "^6.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.3.3",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "8.43.0",
-    "eslint-config-next": "13.4.7"
+    "eslint-config-next": "13.4.7",
+    "typescript": "^5.1.6"
   }
 }
