--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "ESNext",
-    "moduleResolution": "NodeNext",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true
   },
