--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
+    "moduleDetection": "force",
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "incremental": true,
