--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,20 +8,10 @@
     "plugin:import/react"
   ],
   "plugins": ["react", "simple-import-sort"],
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true,
-      "experimentalObjectRestSpread": true
-    }
-  },
   "settings": {
     "import/resolver": {
-      "babel-module": {},
       "node": {
-        "extensions": [".js", ".jsx"]
+        "extensions": [".ts", ".tsx"]
       }
     }
   },
@@ -35,7 +25,6 @@
     "es6": true,
     "browser": true,
     "node": true,
-    "jquery": true,
     "jest": true
   },
   "globals": {}
