--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,3 @@
 {
-  "root": true,
-  "extends": [
-    "eslint:recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:react/recommended",
-    "plugin:import/react"
-  ],
-  "plugins": ["react", "simple-import-sort"],
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".ts", ".tsx"]
-      }
-    }
-  },
-  "rules": {
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error",
-    "react/prop-types": 1,
-    "no-unused-vars": 1
-  },
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true,
-    "jest": true
-  },
-  "globals": {}
+  "extends": "next/core-web-vitals"
 }
