--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,7 @@
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "paths": {
-      "@static/*": ["./public/static/*"],
-      "@generated/*": ["./src/__generated__/*"],
-      "@*": ["./src*"]
-    }
+    "isolatedModules": true
   },
   "include": [
     "src",
