--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     "plugin:react/recommended",
     "plugin:import/react"
   ],
-  "plugins": ["react"],
+  "plugins": ["react", "simple-import-sort"],
   "settings": {
     "import/resolver": {
       "node": {
